# multistream-detector

./: .gitignore  CMakeLists.txt  README.md  sample.py
DockerFIles/: Dockerfile
app/: CMakeLists.txt  app_main.cpp  test.cpp
app/include/: context.h  pipeline.h  probes.h  utils.h
app/src/: context.cpp  pipeline.cpp  probes.cpp
configs/: pgie_detector.txt  source_properties.ini  tracker_config.txt
gst_post_processing/: CMakeLists.txt  main.cpp
gst_post_processing/include/: gstdsexample.h
gst_post_processing/src/: gstdsexample.cpp
notific_plugin/: CMakeLists.txt  gstnotifier.cpp
